# Agentic_Projects

./: .gitignore  README.md
Agentic_SDR/: main.py  pyproject.toml
Agentic_SDR/agents/: app.py  manager_agent.py  sdr_agent.py
Agentic_SDR/agents/templates/: index.html
BeepBoop/: app.py  instructions.txt  main.py  memory.json  pyproject.toml  r.py  requirements.txt
FinanceAgent/: agent_engine.py  app.py  main.py  pyproject.toml
FinanceAgent/data/: dummy_transactions.csv
FinanceAgent/database/: db_utils.py
FinanceAgent/templates/: index.html
FinanceAgent/tools/: search_tool.py
LangGraph_projects/Chatbot/: main.py  pyproject.toml
LangGraph_projects/Chatbot/chatbot/: nodes.py  state.py
LangGraph_projects/Chatbot_advanced/: main.py  nodes.py  pyproject.toml  state.py
LangGraph_projects/Langsmith_chatbot/: main.py  memory.db
LangGraph_projects/Movie_Oracle/: graph.py  main.py  state.py  tools.py
LangGraph_projects/Movie_Oracle/templates/: index.html
LangGraph_projects/Project1/: main.py
LangGraph_projects/sidekick/: main.py
LangGraph_projects/worker_evaluator/: main.py
MCP_Projects/Utilities_mcp/: Filesystem_mcp.py
MCP_Projects/mcp_client/: main.py
MCP_Projects/mcp_client/sandbox/: banoffee.md
MCP_Projects/mcp_clientserver/: my_client.py  my_server.py
claude_code_projects/kong-ecommerce-demo/: Makefile  docker-compose.yml
claude_code_projects/kong-ecommerce-demo/frontend/: Dockerfile  index.html  nginx.conf
claude_code_projects/kong-ecommerce-demo/keycloak/: ecommerce-realm.json
crew_projects/debate/: pyproject.toml
(+41 files in other folders)
